0.084
  - fix a bug while parsing valid consent strings range-based, see https://github.com/peczenyj/GDPR-IAB-TCFv2/issues/20

0.083
  - refactor on Publisher Restriction parsing.
  - small fixes about data and offset.
  - performance improvement: when we parse a range-based consent string now the Parse method is 23% faster, TO_JSON is 9% faster and check vendor consent or legitimate interest is between 122% and 137% faster than the previous version
  - remove GDPR::IAB::TCFv2::RangeConsent package

0.082
  - increase TO_JSON performance by 76% on bitfields and 3116% on range based vendor section
  - add json section 'publisher' and include all publisher restriction, if any, per purpose id, vendor id and restriction type

0.081
  - reorganize JSON output
  - small fixes in pod

0.08
  - add TO_JSON method
  - substitute offset numbers by constants
  - fix typos in pod documentation
  - test tests for pod

0.07
  - add check for publisher restrictions
  - validate if string is a valid base64 url encoded string

0.06
  - add special features as constants
  - add purpose ids as constants
  - add missing methods on pod documentation
  - on list context methods created and last_updated should return epoch in seconds + nanoseconds

0.051
  - remove dependency List::MoreUtils
  - make sure the code will work on perl 5.8
  - make sure the code will work on 32 bits
  - make sure the code will work on newer versions of perl where MIME::Base64 supports base64 url format
  - change version schema
  - some small refactors
  - doc fixes

0.05
  - almost the same as v0.051

v0.0.4
  - fix issue with pack Q on 32 bits environment 
  - fix issue with missing dependency

v0.0.3
  - complete basic development

v0.0.2
  - add first pod

v0.0.1
  - initial version, incomplete